--- a/src/main/resources/templates/booklist.html
+++ b/src/main/resources/templates/booklist.html
@@ -22,8 +22,11 @@
         <td th:text="${book.isbn}"></td>
         <td th:text="${book.publicationYear}"></td>
         <td th:text="${book.price}"></td>
+        <td><a th:href="@{/delete/{id}(id=${book.id})}">Delete</a></td>
     </tr>
 </table>
+
+<p><a href="/newBook">Add book</a></p>
 
 </body>
 
