Add edit functionality

--- a/src/main/resources/templates/booklist.html
+++ b/src/main/resources/templates/booklist.html
@@ -23,10 +23,12 @@
         <td th:text="${book.publicationYear}"></td>
         <td th:text="${book.price}"></td>
         <td><a th:href="@{/delete/{id}(id=${book.id})}">Delete</a></td>
+        <td><a th:href="@{/editBook/{id}(id=${book.id})}">Edit</a></td>
     </tr>
 </table>
 
 <p><a href="/newBook">Add book</a></p>
+<a href="/index">Return to main page</a>
 
 </body>
 
