--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -7,7 +7,8 @@
 </head>
 
 <body>
-    <h1>Main page</h1>
+    <p>Welcome to the bookstore application!</p>
+    <p><a href="/bookList">Book list</a></p>
 </body>
 
 </html>
