--- a/src/main/resources/templates/booklist.html
+++ b/src/main/resources/templates/booklist.html
@@ -4,31 +4,34 @@
 <head>
     <title>Booklist</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link type="text/css" rel="stylesheet" href="css/bootstrap.min.css" th:href="@{css/bootstrap.min.css}" />
 </head>
-<h1>Books</h1>
-<table>
-    <tr>
-        <th>ID</th>
-        <th>Title</th>
-        <th>Author</th>
-        <th>ISBN</th>
-        <th>Publication year</th>
-        <th>Price</th>
-    </tr>
-    <tr th:each="book : ${books}">
-        <td th:text="${book.id}"></td>
-        <td th:text="${book.title}"></td>
-        <td th:text="${book.author}"></td>
-        <td th:text="${book.isbn}"></td>
-        <td th:text="${book.publicationYear}"></td>
-        <td th:text="${book.price}"></td>
-        <td><a th:href="@{/delete/{id}(id=${book.id})}">Delete</a></td>
-        <td><a th:href="@{/editBook/{id}(id=${book.id})}">Edit</a></td>
-    </tr>
-</table>
 
-<p><a href="/newBook">Add book</a></p>
-<a href="/index">Return to main page</a>
+<body>
+    <h1>Books</h1>
+    <table class="table table-striped">
+        <tr>
+            <th>ID</th>
+            <th>Title</th>
+            <th>Author</th>
+            <th>ISBN</th>
+            <th>Publication year</th>
+            <th>Price</th>
+        </tr>
+        <tr th:each="book : ${books}">
+            <td th:text="${book.id}"></td>
+            <td th:text="${book.title}"></td>
+            <td th:text="${book.author}"></td>
+            <td th:text="${book.isbn}"></td>
+            <td th:text="${book.publicationYear}"></td>
+            <td th:text="${book.price}"></td>
+            <td><a class="btn btn-danger" th:href="@{/delete/{id}(id=${book.id})}">Delete</a></td>
+            <td><a th:href="@{/editBook/{id}(id=${book.id})}">Edit</a></td>
+        </tr>
+    </table>
+
+    <p><a class="btn btn-success" href="/newBook">Add book</a></p>
+    <a href="/index">Return to main page</a>
 
 </body>
 
