--- a/src/main/resources/templates/newBook.html
+++ b/src/main/resources/templates/newBook.html
@@ -30,6 +30,16 @@
                 <label>Price</label> <input type="text" th:field="*{price}" />
             </div>
 
+            <div style="clear: both; display: block; height: 10px;"></div>
+            <label for="categoryList">Category</label>
+            <select id="categoryList" th:field="*{category}" class="form-control">
+                <option th:each="category: ${categories}" th:value="${category.categoryId}"
+                    th:text="${category.categoryName}">
+                </option>
+            </select>
+
+            <div style="clear: both; display: block; height: 10px;"></div>
+
             <input type="submit" value="Add"></input>
         </form>
 
