--- a/src/main/resources/templates/editBook.html
+++ b/src/main/resources/templates/editBook.html
@@ -9,27 +9,32 @@
 <body>
     <h1>Edit a book</h1>
     <div>
-        <form th:object="${editBook}" th:action="@{/saveBook}" action="#" method="post">
+        <form th:object="${editBook}" th:action="@{/saveEditedBook}" action="#" method="post">
             <input type="hidden" id="id" th:field="*{id}" />
             <div>
                 <label>Title</label>
                 <input type="text" th:field="*{title}" />
+                <div th:if="${#fields.hasErrors('title')}" th:errors="*{title}">Error</div>
             </div>
             <div>
                 <label>Author</label>
                 <input type="text" th:field="*{author}" />
+                <div th:if="${#fields.hasErrors('author')}" th:errors="*{author}">Error</div>
             </div>
             <div>
                 <label>ISBN</label>
                 <input type="text" th:field="*{isbn}" />
+                <div th:if="${#fields.hasErrors('isbn')}" th:errors="*{isbn}">Error</div>
             </div>
             <div>
                 <label>Publication year</label>
                 <input type="text" th:field="*{publicationYear}" />
+                <div th:if="${#fields.hasErrors('publicationYear')}" th:errors="*{publicationYear}">Error</div>
             </div>
             <div>
                 <label>Price</label>
                 <input type="text" th:field="*{price}" />
+                <div th:if="${#fields.hasErrors('price')}" th:errors="*{price}">Error</div>
             </div>
 
             <div style="clear: both; display: block; height: 10px;"></div>
