--- a/src/main/resources/templates/booklist.html
+++ b/src/main/resources/templates/booklist.html
@@ -1,44 +1,54 @@
-<!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org"
+xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
 
-<head>
+  <head>
     <title>Booklist</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link type="text/css" rel="stylesheet" href="css/bootstrap.min.css" th:href="@{css/bootstrap.min.css}" />
-</head>
+  </head>
 
-<body>
-    <h1>Books</h1>
+  <body>
+  <div class="container">
+    <div class="col-md-4">
+      <h1>Books</h1>
+    </div>
+
+    <div class="col-md-4">
+      <span  sec:authentication="name">Name</span>
+    </div>
+
+    <div class="col-md-4" style="padding:20px 0"></div>
+      <form th:action="@{/logout}" method="post">
+        <input type="submit" value="Sign Out" class="btn btn-sm btn-danger"/>
+      </form>
+	  </div>
+
     <table class="table table-striped">
-        <tr>
-            <th>ID</th>
-            <th>Title</th>
-            <th>Author</th>
-            <th>ISBN</th>
-            <th>Publication year</th>
-            <th>Price</th>
-            <th>Category</th>
-        </tr>
-        <tr th:each="book : ${books}">
-            <td th:text="${book.id}"></td>
-            <td th:text="${book.title}"></td>
-            <td th:text="${book.author}"></td>
-            <td th:text="${book.isbn}"></td>
-            <td th:text="${book.publicationYear}"></td>
-            <td th:text="${book.price}"></td>
-            <td th:text="${book.category.categoryName}"></td>
-
-            <!-- <td th:text="${car.owner?.firstName != null && car.owner?.lastName != null ? car?.owner?.firstName + ' ' + car?.owner?.lastName : 'Unknown'}"> </td> -->
-            <!-- <td th:text="${student.department?.name != null ? student.department.name : 'unknown'}"></td> -->
-
-            <td><a class="btn btn-danger" th:href="@{/delete/{id}(id=${book.id})}">Delete</a></td>
-            <td><a th:href="@{/editBook/{id}(id=${book.id})}">Edit</a></td>
-        </tr>
+      <tr>
+        <th>ID</th>
+        <th>Title</th>
+        <th>Author</th>
+        <th>ISBN</th>
+        <th>Publication year</th>
+        <th>Price</th>
+        <th>Category</th>
+        <th sec:authorize="hasAuthority('ADMIN')"> </th>
+      </tr>
+      <tr th:each="book : ${books}">
+        <td th:text="${book.id}"></td>
+        <td th:text="${book.title}"></td>
+        <td th:text="${book.author}"></td>
+        <td th:text="${book.isbn}"></td>
+        <td th:text="${book.publicationYear}"></td>
+        <td th:text="${book.price}"></td>
+        <td th:text="${book.category.categoryName}"></td></td>
+        <td sec:authorize="hasAuthority('ADMIN')"><a th:href="@{/delete/{id}(id=${book.id})}" class="btn btn-danger">Delete</a></td>
+        <td sec:authorize="hasAuthority('ADMIN')"><a th:href="@{/editBook/{id}(id=${book.id})}">Edit</a></td>
+      </tr>
     </table>
 
-    <p><a class="btn btn-success" href="/newBook">Add book</a></p>
+    <p><td sec:authorize="hasAuthority('ADMIN')"><a href="/newBook" class="btn btn-success">Add book</a></td></p>
     <a href="/index">Return to main page</a>
-
-</body>
-
+  </body>
 </html>
